# LEDCube-APP-Luncher

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.claude/skills/verify-with-pixel-ocr-macos/: SKILL.md  ocr_screenshot.py  ocr_screenshot_color.py
.claude/skills/verify-with-screenshot-macos/: SKILL.md  get_window_id.swift
apps/desktop/: CMakeLists.txt
apps/desktop/src/: main.cpp
docs-archive/: ORIGINAL_PLAN.MD
platform/matrixserver/: CMakeLists.txt
platform/matrixserver/include/cube/matrixserver/: matrixserver_platform.hpp
platform/matrixserver/src/: matrixserver_display.cpp  matrixserver_input.cpp  matrixserver_internal.hpp  matrixserver_platform.cpp  matrixserver_system_info.cpp
platform/sdl/: CMakeLists.txt
platform/sdl/include/cube/sdl/: sdl_platform.hpp
platform/sdl/src/: sdl_display.cpp  sdl_input.cpp  sdl_internal.hpp  sdl_platform.cpp  sdl_system_info.cpp
shared/: CMakeLists.txt
shared/include/: lv_conf.h
shared/include/cube/: app_discovery.hpp  config.hpp  launcher.hpp  lv_font_cube_5px.h  lv_font_cube_6px.h  platform.hpp
shared/include/cube/detail/: hostname_utils.hpp  hue_utils.hpp
shared/src/: app_discovery.cpp  debug_screen.cpp  hostname_utils.cpp  hue_focus.cpp  hue_utils.cpp  info_screen.cpp  internal.hpp  launch_anim.cpp  launcher.cpp  lv_font_cube_5px.c  lv_font_cube_6px.c  mock_app.cpp  settings.cpp  startup_anim.cpp  startup_anim_phosphor.cpp  tick_bridge.cpp  ui_helpers.cpp
tests/: CMakeLists.txt  test_hsv_to_color.cpp  test_normalize_hostname.cpp
tools/: 6px_font.h  gen_5px_font.py  gen_font.py
